@@ -402,13 +402,13 @@ L<https://github.com/tupinek/Random-Day>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Špaček 2013-2017
+ © Michal Josef Špaček 2013-2017
  BSD 2-Clause License
 
 =head1 VERSION
