@@ -134,12 +134,12 @@ REPOSITORY
     <https://github.com/tupinek/Random-Day>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2013-2017
+     © Michal Josef Špaček 2013-2017
      BSD 2-Clause License
 
 VERSION
